--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <body>
     <h1>Curso de <span>JavaScript</span></h1>
     <p id="text"></p>
-    </p>
-  <script src="js/index_08.js"></script>
+    <button ondblclick="eventoDblClick()">Clique aqui</button>
+
+    <div id="teste" onmouseout="viraAzul()" onmouseover="viraVermelho()" style="margin: auto auto; width: 80%; height: 100px; background: aquamarine;"></div>
+  <br>
+
+    <input id="campoTexto"  style="padding: 35px; font-size: 20px;" type="text" placeholder="Digite algo" >
+  <script src="js/index_10.js"></script>
 </body>
 </html>
