--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Curso de JavaScript</title>
+  <title>Curso de JavaScript | zero ao intermediário</title>
 </head>
 <body>
     <h1>Curso de <span>JavaScript</span></h1>
