--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>Curso de <span>JavaScript</span></h1>
-    <p id="text"></p>
-  <script src="js/index_11.js"></script>
+    <p id="teste"></p>
+    <input type="text" id="cor" placeholder="Digite uma cor">
+
+    <button onclick="verificaCor()">Verificar</button>
+  <script src="js/index_14.js"></script>
 </body>
 </html>
