--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <h1>Curso de <span>JavaScript</span></h1>
-    <p id="teste"></p>
-    <input type="text" id="cor" placeholder="Digite uma cor">
-
-    <button onclick="verificaCor()">Verificar</button>
-  <script src="js/index_14.js"></script>
+    
+    <h2>Controle de Tempo</h2>
+    <h3 id="tempo">0</h3>
+    <button onclick="ativarContagem()" class="start">Ativar Contagem</button>
+    <button onclick="pararContagem()" class="stop">Parar Contagem</button>
+  <script src="js/index_16.js"></script>
 </body>
 </html>
