--- a/index.html
+++ b/index.html
@@ -9,10 +9,21 @@
 <body>
     <h1>Curso de <span>JavaScript</span></h1>
     
+    <h2>JSON</h2>
+    <div class="container">
+      <input id="cep" type="text" placeholder="Digite seu CEP">
+    <button onclick="buscarCEP()">Buscar</button>
+  </div>
+  <p id="texto"></p>
+
+
+
+    <!--
     <h2>Controle de Tempo</h2>
     <h3 id="tempo">0</h3>
     <button onclick="ativarContagem()" class="start">Ativar Contagem</button>
     <button onclick="pararContagem()" class="stop">Parar Contagem</button>
-  <script src="js/index_16.js"></script>
+    -->
+  <script src="js/index_19.js"></script>
 </body>
 </html>
