add new project

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,22 +8,49 @@
 </head>
 <body>
     <h1>Curso de <span>JavaScript</span></h1>
-    
-    <h2>JSON</h2>
-    <div class="container">
-      <input id="cep" type="text" placeholder="Digite seu CEP">
-    <button onclick="buscarCEP()">Buscar</button>
-  </div>
-  <p id="texto"></p>
-
-
-
+    <p id="addNew"></p>
+  
     <!--
     <h2>Controle de Tempo</h2>
     <h3 id="tempo">0</h3>
     <button onclick="ativarContagem()" class="start">Ativar Contagem</button>
     <button onclick="pararContagem()" class="stop">Parar Contagem</button>
     -->
-  <script src="js/index_19.js"></script>
+  <script src="js/index_07.js"></script>
 </body>
 </html>
+
+
+
+<!--
+  Tópicos das aula:
+
+  1° Modulo:
+    Introdução.
+    Comandos básicos.
+    Váriaveis.
+    Tipos de Dados.
+    Operadores...
+    Funções.
+
+  2° Modulo:
+    Objetos e Classes. 
+    Eventos: DOM.
+    If e Else.
+
+  3° Modulo:
+    Array.
+    Métodos de Arrays.
+    Switch.
+    Laço de repetiçao.
+    SetTimeount e SetInterval.
+
+  4° Modulo:
+    Manipulação de Datas.
+    JSON.
+
+  5° Modulo:
+    Git e Github.
+    Frameworks (Next, Node, React Native, Angular e Typescript).
+ 
+-->
